--- a/src/style.css
+++ b/src/style.css
@@ -23,7 +23,8 @@ body {
 }
 
 .h2-subheader,
-.h3-subheader {
+.h3-subheader,
+.h4-subheader {
   font-family: "Fredericka the Great", cursive;
   color: var(--first-white);
 }
@@ -36,7 +37,10 @@ body {
 .h3-subheader {
   font-size: 20px;
 }
-
+.h4-subheader {
+  font-size: 16px;
+  display: inline;
+}
 .header-page {
   font-family: "Fredericka the Great", cursive;
   color: var(--first-white);
@@ -63,11 +67,17 @@ body {
   opacity: 0.8;
 }
 
-.project-btn {
+.project-btn,
+.project-link {
   padding: 5px;
   color: var(--third-blue);
   font-family: "Special Elite", cursive;
   margin: 0 auto;
+}
+
+.project-link:hover,
+.project-link:visited {
+  color: var(--third-blue);
 }
 
 .project-btn:hover,
@@ -77,6 +87,12 @@ body {
   font-weight: bold;
 }
 
+.project-description {
+  color: var(--first-white);
+  text-align: left;
+  font-family: "Josefin Slab", serif;
+  font-size: 15px;
+}
 .rounded-left {
   border-radius: 30% 1% 1% 30% / 50% 1% 1% 50%;
 }
