--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,50 @@ body {
   background-color: var(--first-blue);
 }
 
+.contact-icon {
+  font-size: 40px;
+  color: var(--fourth-blue);
+  padding: 10px;
+}
+
+.contact-link,
+.contact-link:hover,
+.contact-link:visited {
+  color: var(--fourth-blue);
+}
+
+.contact-title {
+  color: var(--first-white);
+  font-size: 20px;
+font-family: 'Mate', serif;
+  padding-left: 25px;
+}
+.footer-icon {
+  font-size: x-large;
+  color: var(--first-blue) !important;
+  padding: 10px;
+}
+
+.footer-link,
+.footer-link:hover,
+.footer-link:visited {
+  color: var(--first-blue);
+}
+
+.footer-bg {
+  background-color: var(--third-blue);
+}
+
+.footer-copyright {
+  color: var(--first-blue) !important;
+}
+
+.footer-link {
+  text-decoration: none;
+  color: var(--first-blue) !important;
+  font-weight: bold;
+}
+
 .h1-mainheader {
   font-size: 48px;
 }
@@ -179,37 +223,4 @@ body {
   .main-paragraph {
     font-size: 15px;
   }
-}
-
-.contact-icon {
-  font-size: 20px;
-  color: var(--fourth-blue);
-  padding: 10px;
-}
-.contact-link,
-.contact-link:hover,
-.contact-link:visited {
-  color: var(--fourth-blue);
-}
-
-.footer-icon {
-  font-size: x-large;
-  color: var(--first-blue) !important;
-  padding: 10px;
-}
-.footer-link,
-.footer-link:hover,
-.footer-link:visited {
-  color: var(--first-blue);
-}
-.footer-bg {
-  background-color: var(--third-blue);
-}
-.footer-copyright {
-  color: var(--first-blue) !important;
-}
-.footer-link {
-  text-decoration: none;
-  color: var(--first-blue) !important;
-  font-weight: bold;
 }
