--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@
 
 html,
 body {
-  margin-top: 50px;
+  margin-top: 100px;
   background-color: var(--first-blue);
   min-height: 100%;
 }
@@ -23,7 +23,7 @@ body {
 }
 
 .wrap {
-  min-height: calc(100vh - 130px);
+  min-height: 100vh;
 }
 
 .contact-link,
@@ -54,7 +54,6 @@ body {
 .footer-bg {
   background-color: var(--third-blue);
   font-size: 16px;
-  height: 60px;
 }
 
 .footer-copyright {
