--- a/src/style.css
+++ b/src/style.css
@@ -108,7 +108,7 @@ body {
   color: var(--first-white);
   text-align: justify;
   font-family: "Josefin Slab", serif;
-  font-size: large;
+  font-size: x-large;
 }
 
 #main-photo:hover {
