--- a/src/style.css
+++ b/src/style.css
@@ -9,9 +9,25 @@
   --third-black: #606470;
 }
 
+html {
+  min-height: 100vh;
+}
+
 body {
-  margin-top: 100px;
+  min-height: 100vh;
+  margin: 30px 0px 0px 0px;
   background-color: var(--first-blue);
+}
+
+.header,
+.footer {
+  height: 60px;
+  margin: 0px;
+  padding: 0px;
+}
+
+.wrap {
+  min-height: calc(100vh - 120px);
 }
 
 .contact-icon {
@@ -48,6 +64,7 @@ body {
 .footer-bg {
   background-color: var(--third-blue);
   font-size: 16px;
+  height: 60px;
 }
 
 .footer-copyright {
